--- a/VRChat/72/1289272.html
+++ b/VRChat/72/1289272.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eVIl/1+H70x/Lnsv9cUcEZv+Mo7CsD3TcF44zmlSbxo="></script>
+    "G+tAydHrz4M5tKhgjYFkaqSkLpJwSQ+Y0s6j5F7gHLA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Rigidbody Connector","description":"面倒なRigidbody設定を一発で！","url":"https://booth.pm/ja/items/1289272","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0c747564-8274-4022-9ddd-8d9569e574a1/i/1289272/f183a00c-f374-40ba-9771-549e468344fe_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eVIl/1+H70x/Lnsv9cUcEZv+Mo7CsD3TcF44zmlSbxo="></script>
+    nonce="G+tAydHrz4M5tKhgjYFkaqSkLpJwSQ+Y0s6j5F7gHLA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1289272/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1289272/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
