--- a/VRChat/24/1290824.html
+++ b/VRChat/24/1290824.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZVqdkQYuT8S2tgjvnup3tE3vYUpX6dEOZtxSsuZ9glI="></script>
+    "2LpZYlHxNHpiI3aAUQAEvEpk6Xrvyb7B+bz7W7XxdEQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"\u003c無料\u003eウサギロッド","description":"バーチャルキャストで使用することを想定したウサギの杖です。\nVCIスクリプトが埋め込み可能なので、バーチャルキャスト上で指示棒としても使用できます。\nFBXファイルもありますので、VRChatでも使用できると思われます(すみません、VRChat用にはデバックしていません)。\n\n基本的にはCC0モデルですが、本体や本体を改変したモノ自体の有償配布はご遠慮ください。\n\n「The Seed Online」ではVCIスクリプトを埋め込んだモデルを公開中です。下記ではダウンロードしてすぐバーチャルキャスト上でお使い頂けます。\nhttps://seed.online/items/221b57f2c8992aa75cf0305967cfdc7ec184e485d3c2f7e10a8016d2d612543e\n\nBOOTH上でのモデルにはVCIスクリプトを埋め込んでいませんが、スクリプトそのものや埋め込み方をReadMeファイルに記載しましたので、よろしければご参照ください。\n\n改変・一部使用など、許可なしで行うことが可能です。","url":"https://booth.pm/ja/items/1290824","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a4f36e14-3199-42e4-a8c5-a64b31bb4125/i/1290824/d1b0e891-f9a6-4ad3-81b8-9c9bb0a8766d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZVqdkQYuT8S2tgjvnup3tE3vYUpX6dEOZtxSsuZ9glI="></script>
+    nonce="2LpZYlHxNHpiI3aAUQAEvEpk6Xrvyb7B+bz7W7XxdEQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1290824/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1290824/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
