--- a/VRChat/59/1287459.html
+++ b/VRChat/59/1287459.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TY/9a5s0Ydm8QkMR6rsbw9eP1AxrEfgMioEfpKv2oYs="></script>
+    "R+WSWJOalEEqwFLkBRecPBtd2c6AmwlhWx4rNz0U/ng="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Dモデル】剣帯【VRChat向け】","description":"刀や剣を腰に吊るためのベルトです。\nある程度形を整えたものとシェイプキーを使ってウエストなどを調整できるようにした２種類が同封されています。ですが自分でモデリングソフトを使ってお持ちのアバターに合わせて頂いた方がよい仕上がりになると思われます。\n\n19/04/05二振り刀を装備できるモデルを追加しました。\n\n※OKなこと。許可項目。\n・モデル及びデータの改変。\n（他のモデルと組み合わせる場合はこちらからはOKです。組み合わせ先の規約をよくご確認ください。）\n・個人、サークル等によるゲームでの利用や動画などでの利用。及びそれらによる収益化。\n（法人の方は要相談）（また可能であれば動画等での利用の際クレジット表記してくれるとありがたいです）\n\n※ダメなこと。不可項目。\n・再配布、二次配布の禁止。改変後も不可。\n・元のモデルの自作発言を禁止します。\n・VRChatのアバターペデスタルでの利用は禁止します。\n・政治的活動、宗教活動、特定個人や団体への中傷を目的とした利用を禁止します。\n\n不明なこと、不具合、質問等ございましたら気軽にツイッターへご連絡ください。\nただ、Unity、Blender等の技術的な質問にはお答えしかねます。\n@analognihonnhei","url":"https://booth.pm/ja/items/1287459","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/173e5138-c18a-442d-a811-70459b0503fd/i/1287459/3f179766-8ffb-4f85-9224-6b28d20921d4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TY/9a5s0Ydm8QkMR6rsbw9eP1AxrEfgMioEfpKv2oYs="></script>
+    nonce="R+WSWJOalEEqwFLkBRecPBtd2c6AmwlhWx4rNz0U/ng="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1287459/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               256
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1287459/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               256
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
